--- a/static/styles.css
+++ b/static/styles.css
@@ -43,11 +43,10 @@ h1, h2 {
 
 .alert {
     padding: 20px;
-    background-color: rgb(180, 180, 180);   
+    background-color: rgb(162 227 255);
     color: black;
     margin-bottom: 15px;
-    border-radius: 25px;
-
+    border-radius: 9px;
 }
 
 .closebtn {
