--- a/templates/app.html
+++ b/templates/app.html
@@ -13,7 +13,7 @@
                 <!-- Embed your video player here -->
                 <!-- Replace "your_video_source" with your actual video source URL -->
                 <video width="100%" height="100%" controls>
-                    <source src="your_video_source" type="video/mp4">
+                    <source src="../static/test_lab_2.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
             </div>
