--- a/templates/app.html
+++ b/templates/app.html
@@ -1,80 +1,107 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Video Streaming and Alert Messages</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <title>Video Streaming and Alert Messages</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"
+    integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ=="
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </head>
+
 <body>
-    {% block content %}
-    <div id="container">
-        <div id="video-info-container">
-            <div id="video-container">
-                <!-- Embed your video player here -->
-                <!-- Replace "your_video_source" with your actual video source URL -->
-                <video width="100%" height="100%" controls>
-                    <source src="../static/test_lab_2.mp4" type="video/mp4">
-                    Your browser does not support HTML5 video.
-                </video>
-            </div>
-            <div id="info-container">
-                <h2>        </h2>
-                
-                    <div id="background_chart">
-                        <canvas id="myChart1" ></canvas>
-                      </div>
-                
-            </div>
+  {% block content %}
+  <div id="container">
+    <div id="video-info-container">
+      <div id="video-container">
+        <!-- Embed your video player here -->
+        <!-- Replace "your_video_source" with your actual video source URL -->
+        <video width="100%" height="100%" controls>
+          <source src="../static/test_lab_2.mp4" type="video/mp4">
+          Your browser does not support HTML5 video.
+        </video>
+      </div>
+      <div id="info-container">
+        <h2> </h2>
+
+        <div id="background_chart">
+          <canvas id="myChart"></canvas>
         </div>
-        <div id="alert-container">
-            <h2>Alert Messages</h2>
-            <div id="alert-wrapper">
-                <div id="alert-frame">
-                    {% for message in messages %}
-                    <div class="alert">
-                        <span>{{ message }}</span>
-                        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-                    </div>
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
+
+      </div>
     </div>
-    {% endblock %}
-    
-    
-    <script>
-      const ctx = document.getElementById('myChart1');
-    
-      new Chart(ctx, {
-        type: 'bar',
-        data: {
-          labels: ['Area A', 'Area B', 'Area C', 'Area D'],
-          datasets: [{
-            label: 'Person in Area',
-            data: [{{ dataA }}, {{ dataB }}, {{ dataC }}, {{ dataD }}],
-            backgroundColor: ['rgba(255, 99, 132, 0.2)', 'rgba(255, 159, 64, 0.2)', 'rgba(75, 192, 192, 0.2)', 'rgba(54, 162, 235, 0.2)'],
-            borderWidth: 2
-          }]
-        },
-        options: {
-          indexAxis: 'y',
-          scales: {
-            x: {
-              beginAtZero: true
+    <div id="alert-container">
+      <h2>Alert Messages</h2>
+      <div id="alert-wrapper">
+        <div id="alert-frame">
+          {% for message in messages %}
+          <div class="alert">
+            <span>{{ message }}</span>
+            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endblock %}
+
+  <script>
+    const ctx = document.getElementById('myChart1');
+
+    new Chart(ctx, {
+      type: 'bar',
+      data: {
+        labels: ['Area A', 'Area B', 'Area C', 'Area D'],
+        datasets: [{
+          label: 'Person in Area',
+          data: [{
+            {
+              dataA
             }
+          }, {
+            {
+              dataB
+            }
+          }, {
+            {
+              dataC
+            }
+          }, {
+            {
+              dataD
+            }
+          },],
+          backgroundColor: ['rgba(255, 99, 132, 0.2)', 'rgba(255, 159, 64, 0.2)', 'rgba(75, 192, 192, 0.2)',
+            'rgba(54, 162, 235, 0.2)'
+          ],
+          borderWidth: 2
+        }]
+      },
+      options: {
+        indexAxis: 'y',
+        scales: {
+          x: {
+            beginAtZero: true
           }
         }
-      });
-    </script>
-    <!-- <script>
+      }
+    });
+  </script>
+  <!-- <script>
         const element = document.getElementById('myChart2');
         element.style.width = '600px'; // Set the text color to red
         element.style.height = '300px'; // Set the font size to 24 pixels
     </script> -->
-        
-    
-    
-    
+
+
+  <script src="{{ url_for('static', filename='app.js') }}"></script>
+
 </body>
+
 </html>
